@@ -1,6 +1,6 @@
-# Copyright 1999-2006 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfsidmap/Attic/libnfsidmap-0.17.ebuild,v 1.6 2006/12/28 17:26:56 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfsidmap/Attic/libnfsidmap-0.17.ebuild,v 1.7 2007/01/12 12:09:47 opfer Exp $
 
 inherit eutils flag-o-matic
 
@@ -10,7 +10,7 @@ SRC_URI="http://www.citi.umich.edu/projects/nfsv4/linux/libnfsidmap/${P}.tar.gz"
 
 LICENSE="BSD"
 SLOT="0"
-KEYWORDS="alpha ~amd64 arm hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc ~x86"
+KEYWORDS="alpha ~amd64 arm hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc x86"
 IUSE="ldap"
 
 DEPEND="ldap? ( net-nds/openldap )"
