@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/Attic/acl-2.2.39-r1.ebuild,v 1.5 2007/01/12 00:45:02 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/Attic/acl-2.2.39-r1.ebuild,v 1.6 2007/01/12 12:11:22 opfer Exp $
 
 WANT_AUTOCONF="latest"
 inherit eutils autotools toolchain-funcs
@@ -14,7 +14,7 @@ SRC_URI="ftp://oss.sgi.com/projects/xfs/download/cmd_tars/${MY_P}.tar.gz
 
 LICENSE="LGPL-2.1"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 arm ~hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc ~x86"
+KEYWORDS="~alpha ~amd64 arm ~hppa ia64 m68k ~mips ~ppc ~ppc64 s390 sh sparc x86"
 IUSE="nfs nls"
 
 DEPEND=">=sys-apps/attr-2.4
