@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/acl
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.63 2007/01/12 00:45:02 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/acl/ChangeLog,v 1.64 2007/01/12 12:11:22 opfer Exp $
+
+  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org> acl-2.2.39-r1.ebuild:
+  stable x86, bug #161640
 
   12 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> acl-2.2.39-r1.ebuild:
   Stable on sparc wrt #161640
