@@ -1,6 +1,10 @@
 # ChangeLog for net-libs/libnfsidmap
-# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfsidmap/ChangeLog,v 1.5 2006/12/28 17:26:56 gustavoz Exp $
+# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-libs/libnfsidmap/ChangeLog,v 1.6 2007/01/12 12:09:47 opfer Exp $
+
+  12 Jan 2007; Christian Faulhammer <opfer@gentoo.org>
+  libnfsidmap-0.17.ebuild:
+  stable x86, bug #161640
 
   28 Dec 2006; Gustavo Zacarias <gustavoz@gentoo.org>
   libnfsidmap-0.17.ebuild:
